paridx Konventionen umgesetzt

--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -1,5 +1,8 @@
 % \begin{refsection}
-\chapterpreamble{Trifft eine Anrufung beim Schiedsgericht ein, ist zu prüfen ob der Antragsteller antragsberechtigt ist (\S~8 Abs.~1 SGO) und ob die Anrufung formell vollständig ist (\S~8 Abs.~3 SGO). Die fristgerechte Klageerhebung ist bereits im Rahmen der Anrufung zu prüfen. Nur bei Zweifeln, die sich nicht ohne Ermittlungen klären lassen, ist das Verfahren zu eröffnen. Die Anschrift i.S.d. \S~8 Abs.~3 S.~1 SGO kann auch aus einer Postfachadresse bestehen.}
+\chapterpreamble{Trifft eine Anrufung beim Schiedsgericht ein, ist zu prüfen ob der Antragsteller antragsberechtigt ist (\S~8 Abs.~1 SGO) und ob die Anrufung formell vollständig ist (\S~8 Abs.~3 SGO).
+Die fristgerechte Klageerhebung ist bereits im Rahmen der Anrufung zu prüfen.
+Nur bei Zweifeln, die sich nicht ohne Ermittlungen klären lassen, ist das Verfahren zu eröffnen.
+Die Anschrift i.S.d. \S~8 Abs.~3 S.~1 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} kann auch aus einer Postfachadresse bestehen.}
 
 \chapter{Die Anrufung}
 \label{Anrufung}
@@ -32,14 +35,14 @@ Eine Klage ist grundsätzlich nur statthaft, wenn diese Anforderungen erfüllt s
 
 \subsection{Antragsteller}
 \label{Anrufung:Statthaftigkeit:Antragsteller}
-Das allererste dieser Kriterien ist die Benennung eines \index[idx]{Antragsteller|textbf} Antragstelllers bzw. einer Antragstellerin, andernorts auch Kläger  bzw. Klägerin genannt.
-Die SGO kennt alledings den Begriff Kläger bzw. Klägerin nicht sondern nur den Begriff Antragsteller bzw. Antragstellerin, entsprechend wird auch dieser Begriff hier verwendet.
+Das allererste dieser Kriterien ist die Benennung eines \index[idx]{Antragsteller|textbf} Antragstelllers bzw. einer Antragstellerin, andernorts auch Kläger bzw. Klägerin genannt.
+Die SGO kennt allerdings den Begriff Kläger bzw. Klägerin nicht, sondern nur den Begriff Antragsteller bzw. Antragstellerin, entsprechend wird auch dieser Begriff hier verwendet.
 Antragsteller bzw. Antragstellerin ist typischerweise der oder die Anrufende selbst.
 In einigen Fällen, typischerweise im Falle einer Anrufung durch einen Vorstand oder ein anderes Organen, kann der oder die Anrufende auch Vertreter bzw. Vertreterin des Antragstellers bzw. der Antragstellerin sein.
 In jedem Fall muss aus der Anrufung klar identifizierbar hervorgehen, wer nun mit der Anrufung Rechte bzw. Ansprüche vor dem Schiedsgericht gegen eine andere Person gelten machen will.
 Dieser jemand ist der Antragsteller bzw. die Antragstellerin.
 
-In den meisten Fällen dürfte dies ein Mitglied sein, in seltenen Fällen kann es auch ein einzelner Amtsträger oder eine einzelne Amtsträgerin sein, noch häufiger dürfte es ein Organ als gesamtes sein.
+In den meisten Fällen dürfte dies ein Mitglied sein, in seltenen Fällen kann es auch ein einzelner Amtsträger oder eine einzelne Amtsträgerin sein, noch häufiger dürfte es ein Organ als Gesamtes sein.
 Typischerweise gibt es lediglich vier Fälle, in denen die Anrufung durch ein Organ erfolgt:
 \begin{enumerate}[label=\arabic*.)]
 % \itemsep0em 
@@ -80,7 +83,7 @@ Allerdings müsste dann eine Klagebefugnis vom Mitglied vorliegen, typischerweis
 Daher kann fast davon ausgegangen werden, dass es nicht zu einer solchen Klagekonstellation kommen kann bzw. falls doch, dass diese dann gerade nötig ist, um einen effektien Rechtsschutz für Mitglieder zu gewähren.
 
 Fraglich ist zudem ob die Partei bzw. die einzelnen Gliederungen Parteifähig im Sinne der SGO sind.
-Während dies für Prozesse vor staatlichen Gerichten aufgrund der dortigen Regelungen zur Parteifähigkeit\footnote{Vgl. etwa \S~50 ZPO\nomenclature{ZPO}{Zivilprozessordnung}\index[paridx]{ZPO!\S~50}.} grundsätzlich anzunehmen ist, spielt die Partei bzw. Gliederung als solche im internen Rechtsstreit eine untergeordnete Rolle, da die Handlung immer zumindest einem Organ oder zumindest Amtsträger zugeordnet werden kann.
+Während dies für Prozesse vor staatlichen Gerichten aufgrund der dortigen Regelungen zur Parteifähigkeit\footnote{Vgl. etwa \S~50 ZPO\nomenclature{ZPO}{Zivilprozessordnung}\index[paridx]{ZPO!50@\S~50}.} grundsätzlich anzunehmen ist, spielt die Partei bzw. Gliederung als solche im internen Rechtsstreit eine untergeordnete Rolle, da die Handlung immer zumindest einem Organ oder zumindest Amtsträger zugeordnet werden kann.
 Daher ist auch das Bundesschiedsgericht in seiner Rechtsprechung dazu übergegangen, die Parteifähigkeit der Partei und ihrer Gliederungen nur zu bejahen, wenn eine derartige Zurechnung nicht möglich ist.\footnote{Vgl. \cite[S. 4]{BSG1614HS}; Diese Rechsprechung fortführend \cite[S. 2]{BSG3815HS} m.w.N.}
 Die Partei und die Gliederungen kommen also nur als subsidiärer Antragsgegner bzw. Antragsgegnerin in Betracht.
 
@@ -153,7 +156,7 @@ Die Antragsbefugnis ist damit ein echtes Zulässigkeitskriterium und erst nach d
 \label{Anrufung:Kriterien:Form}
 Die Anforderungen an die Form der Anrufung sind sehr gering.
 Es wird in \S~8 Abs.~3 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} lediglich die Textform gefordert.
-Im Gegensatz zur Schriftform, deren Erfüllung und Nichterfüllung bei untergesetzlich vorgeschriebener Formerfordernis sehr strittig ist und auch in der Schiedsgerichtsbarkeit der Piratenpartei schon zu Entscheidungen führte,\footcite{LSGBB146} ist die Textform ausreichend klar und eindeutig in \S~126b BGB\index[paridx]{BGB!\S~126b} definiert und eine Formlockerung in \S~127 BGB\index[paridx]{BGB!\S~127} nicht vorgesehen.
+Im Gegensatz zur Schriftform, deren Erfüllung und Nichterfüllung bei untergesetzlich vorgeschriebener Formerfordernis sehr strittig ist und auch in der Schiedsgerichtsbarkeit der Piratenpartei schon zu Entscheidungen führte,\footcite{LSGBB146} ist die Textform ausreichend klar und eindeutig in \S~126b BGB\index[paridx]{BGB!126b@\S~126b} definiert und eine Formlockerung in \S~127 BGB\index[paridx]{BGB!127@\S~127} nicht vorgesehen.
 Es reicht daher ein Schreiben, das mit dem Namen unterzeichnet ist und das in einer Form, die zur visuellen Widergabe des Inhalts geeignet ist (also auch z.B. eine E-Mail).
 
 \subsection{Frist}
@@ -191,7 +194,7 @@ Dabei müssen vor allem das Bundesschiedsgericht, aber auch für Landesschiedsge
 \label{Anrufung:Kriterien:Zustaendigkeit}
 Über die Zuständigkeit hat das Gericht bereits mit Anrufung zu entscheiden, \S~8 Abs.~5 SGO\index[paridx]{SGO!8@\S~8!5@Abs.~5}.
 Dies hat den Hintergrund, dass die SGO anders als die staatliche Gerichtsbarkeit, keine Verweisung vom unzuständigen, angerufenen Gericht an das zuständige Gericht vorsieht.
-Auch sind die Zuständigkeitskriterien der SGO nach \S~6 SGO\index[paridx]{SGO!\S~6} wesentlich einfacher als etwa die der ZPO.
+Auch sind die Zuständigkeitskriterien der SGO nach \S~6 SGO\index[paridx]{SGO!6@\S~6} wesentlich einfacher als etwa die der ZPO.
 So ist es bereits aus den Daten der Anrufung ersichtlich, ob ein Gericht zuständig ist.
 
 \subsubsection{Grundlegendes}
@@ -204,7 +207,7 @@ Bisher ist das allerdings in keinem Landesverband passiert.
 
 \S~6 Abs.~2 SGO\index[paridx]{SGO!6@\S~6!2@Abs.~2} bestimmt dann noch, dass sie die Zuständigkeit nach der Verbandszugehörigkeit des Antragsgegners richtet.
 Verbandszugehörige sind die Mitglieder eines Verbandes, das können nach \S~2 Abs.~1 Satz~2 PartG\index[paridx]{PartG!2@\S~2!1@Abs.~1} nur natürliche Personen sein.
-Dabei wird in \S~6 Abs.~2 SGO nochmal klargestellt, was sich aus \S~8 Abs.~5 SGO, der die Entscheidung über die Zuständigkeit mit der Eröffnung als Entscheidung über die Korrektheit der Anrufung zusammenlegt, ergibt: Der relevante Zeitpunkt für die Entscheidung ist immer die mitgliedschaftliche Zuordnung zum Zeitpunkt der Anrufung.
+Dabei wird in \S~6 Abs.~2 SGO nochmal klargestellt, was sich aus \S~8 Abs.~5 SGO,\index[paridx]{SGO!8@\S~8!5@Abs.~5} der die Entscheidung über die Zuständigkeit mit der Eröffnung als Entscheidung über die Korrektheit der Anrufung zusammenlegt, ergibt: Der relevante Zeitpunkt für die Entscheidung ist immer die mitgliedschaftliche Zuordnung zum Zeitpunkt der Anrufung.
 Das wiederrum hängt auch damit zusammen, dass es keine Verweisung zwischen den einzelnen Gerichten gibt und es der anrufenden Streitpartei nicht zugemutet werden soll, dass ein etwaiger Gliederungswechsel oder z.B. eine Verschmelzung von Gliederungen das schon angelaufene Verfahren ungültig macht, weil es im Nachinein unzulässig wurde.
 
 \subsubsection{Zuständigkeit bei Verfahren gegen ein Organ}
@@ -233,10 +236,10 @@ Im Falle einer Ordnungsmaßnahme würde dann ein verbandsfremdes Schiedsgericht 
 Für die Frage der verbandsfremden Ermessenskontrolle muss allerdins bedacht werden, dass in beiden Fällen das letzinstanzlich zuständige Bundesschiedsgericht das letzte Wort hätte.
 Daher scheint ein außeinanderfallen von Verbandszugehörigkeit des ersintanzlich zuständigen Schiedsgerichts und des verhängenden Organs schlussendlich doch unproblematisch, zumal die gesonderte Regelung durch \S~6 Abs.~4 SGO\index[paridx]{SGO!6@\S~6!4@Abs.~4} wohl auch das mitbezweckt hat.
 
-Für den Parteiausschluss wird das wohl davon abhängen, wie man ihn im Vergleich zu den anderen Ordnungsmaßnahmen einsortiert. Wird er einfach nur als stärkste Ordnungsmaßnahme einsortiert, auf die das Prozedere der Ordnungsmaßnahmen nach \SSS~14, 6 Abs.~1 BS\index[paridx]{BS!\S~14}\index[paridx]{BS!6@\S~6!1@Abs.~1} voll anwendbar ist\footnote{So wohl die jüngste Ansicht des Bundesschiedsgerichtes in \cite{BSG3615HS} und das Sondervotum des Bundesschiedsrichters Markus Gerstel in \cite{BSG20131005}.}, muss sich der Betroffene wohl damit abfinden, dass er ab Anhörung  bzw. spätestens ab dem Beschluss des Organs über die Einreichung einen Verbandswechsel der Zulässigkeit des Verfahrens nicht mehr entgegenhalten kann, um auch hier eine Gleichheit mit den anderen Ordnungsmaßnahmen zu erreichen.
+Für den Parteiausschluss wird das wohl davon abhängen, wie man ihn im Vergleich zu den anderen Ordnungsmaßnahmen einsortiert. Wird er einfach nur als stärkste Ordnungsmaßnahme einsortiert, auf die das Prozedere der Ordnungsmaßnahmen nach \SSS~14, 6 Abs.~1 BS\index[paridx]{BS!14@\S~14}\index[paridx]{BS!6@\S~6!1@Abs.~1} voll anwendbar ist\footnote{So wohl die jüngste Ansicht des Bundesschiedsgerichtes in \cite{BSG3615HS} und das Sondervotum des Bundesschiedsrichters Markus Gerstel in \cite{BSG20131005}.}, muss sich der Betroffene wohl damit abfinden, dass er ab Anhörung  bzw. spätestens ab dem Beschluss des Organs über die Einreichung einen Verbandswechsel der Zulässigkeit des Verfahrens nicht mehr entgegenhalten kann, um auch hier eine Gleichheit mit den anderen Ordnungsmaßnahmen zu erreichen.
 Denn wenn das betroffene Mitglied  von dem Plan für Parteiaausschlussverfahren wusste und deswegen den Verband wechselt, ist es nicht schutzwürdig, ganz unabhängig davon, ob der Wechsel im Innenverhältnis der Gliederungen nach \S~3 Abs.~2a BS\index[paridx]{SGO!3@\S~3!2@Abs.~2}
 Folgt man hingegen der in \cite{BSG20131005} aufgezeigten Rechtssprechungslinie und sieht die Anhörung durch das einleitende Organ im Parteiausschlussverfahren als nicht verpflichtend an, so ergibt sich kein Grund, warum das Mitglied einen solchen Beschluss gegen sich gelten lassen muss, von dem es im Zweifel noch nicht einmal etwas wusste.
-Das Vertrauen darauf, dass grundsätzlich nur die Organe der Gliederungen, in denen man tatsächlich aktuell Mitglied ist,  Disziplinarmaßnahmen gegen das Mitglied unternehmen, ist dann schutzwürdig und der relevante Zeitpunkt für die Entscheidung über die Zuständigkeit dürfte wieder mit der Anrufung beim Schiedsgericht zusammenfallen.\footnote{Vgl.  wie schon oben \cite[S. 9]{BSG115HS}, unter II.1.c.c).}
+Das Vertrauen darauf, dass grundsätzlich nur die Organe der Gliederungen, in denen man tatsächlich aktuell Mitglied ist,  Disziplinarmaßnahmen gegen das Mitglied unternehmen, ist dann schutzwürdig und der relevante Zeitpunkt für die Entscheidung über die Zuständigkeit dürfte wieder mit der Anrufung beim Schiedsgericht zusammenfallen.\footnote{Vgl. wie schon oben \cite[S. 9]{BSG115HS}, unter II.1.c.c).}
 
 \subsection{Schlichtung}
 \label{Anrufung:Kriterien:Schlichtung}
@@ -299,7 +302,13 @@ Das Gebot des effektiven Rechtsschutzes stützt also diese enge Auslegung. Der S
 \label{Anrufung:Beschluss}
 Nach der Prüfung aller dargelegten Kriterien ist über die Eröffnung zu bescheiden.
 Dabei ist relevant, sich für jedes Kritrium und seine Bestimmungen einzeln anzusehen, um festzustellen, welche Anforderungen für die Eröffnung vorliegen müssen und welche Kriterien erst für das Endurteil vorliegen müssen.
-Grundsätzlich gilt dabei: Die Fakten müssen vollständig zutreffen, aber die Informationen über diese Fakten können in einigen Fällen noch während des Verfahrens nachgeliefert werden. Und zwar ist ein solcher Nachtrag von Fakten immer möglich, wenn es Teil der Verhandlung ist, ebendiese Informationen zu ermitteln. Das ist damit auch das Unterscheidungskriterium zwischen unechten Zulässigkeitskriterien, die bereits mit Eröffnung zu entscheiden sind, und echten Zulässigkeitskriterien, die erst im Prozessurteil beschieden werden müssen. Das Musterbeispiel für einen solchen Nachtrag dürften Informationen über Sachverhalt und Begründung der Klage sein, deren Ermittlung ja gerade Haupttätigkeit im Verfahren ist. Mit anderen Worten: Alle Entscheidungen, die zwnagsläufig auf Ermittlung und Wertungen des Gerichts und dem Vortrag der Streitparteien beruhen, sind im Zweifel echte Zulässigkeitsvorraussetzungen und erst mit dem Endurteil zu bescheiden.
+Grundsätzlich gilt dabei:
+Die Fakten müssen vollständig zutreffen, aber die Informationen über diese Fakten können in einigen Fällen noch während des Verfahrens nachgeliefert werden.
+Und zwar ist ein solcher Nachtrag von Fakten immer möglich, wenn es Teil der Verhandlung ist, ebendiese Informationen zu ermitteln.
+Das ist damit auch das Unterscheidungskriterium zwischen unechten Zulässigkeitskriterien, die bereits mit Eröffnung zu entscheiden sind, und echten Zulässigkeitskriterien, die erst im Prozessurteil beschieden werden müssen.
+Das Musterbeispiel für einen solchen Nachtrag dürften Informationen über Sachverhalt und Begründung der Klage sein, deren Ermittlung ja gerade Haupttätigkeit im Verfahren ist.
+Mit anderen Worten:
+Alle Entscheidungen, die zwnagsläufig auf Ermittlung und Wertungen des Gerichts und dem Vortrag der Streitparteien beruhen, sind im Zweifel echte Zulässigkeitsvorraussetzungen und erst mit dem Endurteil zu bescheiden.
 
 \subsection{Nachbesserung}
 \label{Anrufung:Beschluss:Nachbesserung}
