--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -1,4 +1,10 @@
-\chapterpreamble{Innerhalb des Organs „Schiedsgericht“, das sich zusammensetzt aus den gewählten Richtern und Ersatzrichtern, stellen die mit dem jeweiligen Verfahren befassten Richter das (entscheidende) „Schiedsgericht“ dar. Die genaue Zusammensetzung ergibt sich aus der Eigenschaft als Schiedsrichter oder (im Fall von Kammersystemen) aus der Geschäftsordnung. Die Zusammensetzung muss von vorn herein feststehen und darf nicht willkürlich verändert werden. Ein einmal befasster Richter kann regelmäßig nur durch Ausschluss aus dem konkreten Verfahren (typischerweise wegen Besorgnis der Befangenheit), generelle Beurlaubung oder Rücktritt vom Amt aus einem Verfahren ausscheiden. Ein temporäres Ausscheiden und spätere Wiederbefassung kommt ebensowenig in Betracht wie eine Rücktritt nur für ein einzelnes Verfahren. Ablehnungsanträge (Anträge auf Feststellung der Besorgnis der Befangenheit) müssen sich immer gegen jeweils eine konkrete Person richten und müssen einzeln (im Zweifel in der zeitlichen Reihenfolge der Antragstellung) entschieden werden. Näheres legt \S~5~SGO\index[paridx]{SGO!\S~5} fest.}
+\chapterpreamble{Innerhalb des Organs „Schiedsgericht“, das sich zusammensetzt aus den gewählten Richtern und Ersatzrichtern, stellen die mit dem jeweiligen Verfahren befassten Richter das (entscheidende) „Schiedsgericht“ dar.
+Die genaue Zusammensetzung ergibt sich aus der Eigenschaft als Schiedsrichter oder (im Fall von Kammersystemen) aus der Geschäftsordnung.
+Die Zusammensetzung muss von vorn herein feststehen und darf nicht willkürlich verändert werden.
+Ein einmal befasster Richter kann regelmäßig nur durch Ausschluss aus dem konkreten Verfahren (typischerweise wegen Besorgnis der Befangenheit), generelle Beurlaubung oder Rücktritt vom Amt aus einem Verfahren ausscheiden.
+Ein temporäres Ausscheiden und spätere Wiederbefassung kommt ebensowenig in Betracht wie eine Rücktritt nur für ein einzelnes Verfahren.
+Ablehnungsanträge (Anträge auf Feststellung der Besorgnis der Befangenheit) müssen sich immer gegen jeweils eine konkrete Person richten und müssen einzeln (im Zweifel in der zeitlichen Reihenfolge der Antragstellung) entschieden werden.
+Näheres legt \S~5~SGO\index[paridx]{SGO!5@\S~5} fest.}
 
 \chapter{Zusammensetzung des Schiedsgerichts}
 \label{Zusammensetzung}
@@ -9,7 +15,7 @@
 %\subsection{Geschäftsordnung} % GO ist für Kapitel "Innere Organisation" geplant – braucht es hier eine eigene Überschrift?
 %Exkurs(?): Geschäftsordnung (hier Ersatzrichter mit Stimmrecht?)
 Das Schiedsgericht ist zwar kein Organ\index[idx]{Organ} im Sinne des \S~8 Abs.~2 PartG\index[paridx]{PartG!8@\S~8!2@Abs.~2}\footnote{\cite[\S~14 Rn.~3]{ipsen2008parteiengesetz}}, da es nicht der originiären politischen Willensbildung der Partei dient, allerdings ist es grundsätzlich ein Organ im weiteren Sinne.
-Dementsprechend haben die Satzungen der Piratenparteien und ihrer Untergliederungen das Schiedsgericht typischerweise auch als Organ bezeichnet.\footnote{\S~9 Abs.~2~BS,\index[paridx]{BS!\S~9!Abs.~2} \S~9 Abs.~1~LS-BW,\index[paridx]{LS-BW!\S~9!Abs.~2} \S~9 Abs.~1~LS-BY,\index[paridx]{LS-BY!\S~9!Abs.~1} \S~7 Abs.~1~LS-BB,\index[paridx]{LS-BB!\S~7!Abs.~1} \S~10~LS-HB\index[paridx]{LS-HB!\S~10} \S~8 Nr.~1~c~LS-HH,\index[paridx]{LS-HH!\S~8} \S~9 Abs.~1~LS-HE\index[paridx]{LS-HE!\S~9!Abs.~1} \S~9~LS-MV,\index[paridx]{LS-MV!\S~9} \S~6~LS-NW,\index[paridx]{LS-NW!\S~6} \S~4~LS-RP,\index[paridx]{LS-RP!\S~4} \S~9 Abs.~1~LS-SL,\index[paridx]{LS-SL!\S~9!Abs.~1} \S~6 Abs.~1~LS-SN,\index[paridx]{LS-SN!\S~6!Abs.~1} \S~9 Abs.~1~LS-ST,\index[paridx]{LS-ST!\S~9!Abs.~1} \S~9 Abs.~1~LS-SH,\index[paridx]{LS-SH!\S~9!Abs.~1} \S~6 Abs.~1~LS-TH;\index[paridx]{LS-TH!\S~6!Abs.~1} lediglich die LS-BE, als auch die LS-NI schweigen zum Status.}
+Dementsprechend haben die Satzungen der Piratenparteien und ihrer Untergliederungen das Schiedsgericht typischerweise auch als Organ bezeichnet.\footnote{\S~9 Abs.~2~BS,\index[paridx]{BS!9@\S~9!2@Abs.~2} \S~9 Abs.~1~LS-BW,\index[paridx]{LS-BW!9@\S~9!2@Abs.~2} \S~9 Abs.~1~LS-BY,\index[paridx]{LS-BY!9@\S~9!1@Abs.~1} \S~7 Abs.~1~LS-BB,\index[paridx]{LS-BB!7@\S~7!1@Abs.~1} \S~10~LS-HB\index[paridx]{LS-HB!10@\S~10} \S~8 Nr.~1~c~LS-HH,\index[paridx]{LS-HH!8@\S~8} \S~9 Abs.~1~LS-HE\index[paridx]{LS-HE!9@\S~9!1@Abs.~1} \S~9~LS-MV,\index[paridx]{LS-MV!9@\S~9} \S~6~LS-NW,\index[paridx]{LS-NW!6@\S~6} \S~4~LS-RP,\index[paridx]{LS-RP!4@\S~4} \S~9 Abs.~1~LS-SL,\index[paridx]{LS-SL!9@\S~9!1@Abs.~1} \S~6 Abs.~1~LS-SN,\index[paridx]{LS-SN!6@\S~6!1@Abs.~1} \S~9 Abs.~1~LS-ST,\index[paridx]{LS-ST!9@\S~9!1@Abs.~1} \S~9 Abs.~1~LS-SH,\index[paridx]{LS-SH!9@\S~9!1@Abs.~1} \S~6 Abs.~1~LS-TH;\index[paridx]{LS-TH!6@\S~6!1@Abs.~1} lediglich die LS-BE, als auch die LS-NI schweigen zum Status.}
 \nomenclature{LS-BW}{Landessatzung Baden-Württemberg} \nomenclature{LS-BY}{Landessatzung Bayern} \nomenclature{LS-BB}{Landessatzung Brandenburg} \nomenclature{LS-BE}{Landessatzung Berlin} \nomenclature{LS-HB}{Landessatzung Bremen} \nomenclature{LS-HH}{Landessatzung Hamburg} \nomenclature{LS-HE}{Landessatzung Hessen} \nomenclature{LS-MV}{Landessatzung Mecklenburg-Vorpommern} \nomenclature{LS-NI}{Landessatzung Niedersachsen} \nomenclature{LS-NW}{Landessatzung Nordrhein-Westfalen} \nomenclature{LS-RP}{Landessatzung Rheinland-Pfalz} \nomenclature{LS-SL}{Landessatzung Saarland} \nomenclature{LS-SN}{Landessatzung Sachsen} \nomenclature{LS-ST}{Landessatzung Sachsen-Anhalt} \nomenclature{LS-TH}{Landessatzung Thüringen} \nomenclature{LS-SH}{Landessatzung Schleswig-Holstein}
 
 \section{Das Schiedsgericht als Organ}
@@ -18,13 +24,13 @@ Das Organ setzt sich zusammen aus allen gewählten Richtern und Ersatzrichtern.
 Für das Organ selbst gibt es dabei noch keine Unterscheidung in der Titelqualität.
 Das Gesamtorgan entscheidet dabei nie über konkrete Fälle, sondern nur über die allgemeinen Angelegenheiten des Organs.
 Dazu gehören etwa der Beschluss der Geschäftsordnung\index[idx]{Geschäftsordnung} nach \S~2 Abs.~6 SGO\index[paridx]{SGO!2@\S~2!6@Abs.~6} empfiehlt.
-Auch etwa gemeinsam formulierte Standardsschreiben, die Zuständigkeiten für die Verwaltung der Dokumentation nach \S~14 SGO\index[paridx]{SGO!\S~14} und sämtliche sonstigen, nicht auf konkrete Verfahren oder Anrufungen bezogenen Tätigkeiten werden von dem gesamten Organ entschieden.
+Auch etwa gemeinsam formulierte Standardsschreiben, die Zuständigkeiten für die Verwaltung der Dokumentation nach \S~14 SGO\index[paridx]{SGO!14@\S~14} und sämtliche sonstigen, nicht auf konkrete Verfahren oder Anrufungen bezogenen Tätigkeiten werden von dem gesamten Organ entschieden.
 Nicht dazu gehört allerdings die Wahl des Vorsitzenden Richters.
 Die Schiedsgerichtsordnung hat diese in \S~3 Abs.~1 Satz~2 SGO\index[paridx]{SGO!3@\S~3!1@Abs.~1} allein in die Hände der Richter gelegt, die Ersatzrichter haben hierbei weder aktives noch passives Wahlrecht.
 
 \section{Das Schiedsgericht als Spruchkörper}
 \label{Zusammensetzung:Spruchkoerper}
-Das Schiedgericht im Sinne des entscheidenen Spruchkörpers\index[idx]{Spruchkörper|textbf} für konkrete Verfahren setzt sich dahingegen nach \SSS~3--5 SGO\index[paridx]{SGO!\S~3}\index[paridx]{SGO!\S~4}\index[paridx]{SGO!\S~5} zusammen. Dabei ist im Folgenden mit Schiedsgericht nicht mehr das Organ, sondern der Spruchkörper für eine konkrete Anrufung gemeint.
+Das Schiedgericht im Sinne des entscheidenen Spruchkörpers\index[idx]{Spruchkörper|textbf} für konkrete Verfahren setzt sich dahingegen nach \SSS~3--5 SGO\index[paridx]{SGO!3@\S~3}\index[paridx]{SGO!4@\S~4}\index[paridx]{SGO!5@\S~5} zusammen. Dabei ist im Folgenden mit Schiedsgericht nicht mehr das Organ, sondern der Spruchkörper für eine konkrete Anrufung gemeint.
 
 \subsection{Besetzung}
 \label{Zusammensetzung:Spruchkoerper:Besetzung}
@@ -38,7 +44,7 @@ Auf die Besonderheiten der Besetzung des Bundesschiedsgerichtes aufgrund der erh
 \subsection{Änderung der Besetzung}
 \label{Zusammensetzung:Spruchkoerper:Aenderung}
 Die Besetzung\index[idx]{Besetzung|textbf} des Gerichts darf nur in den dafür vorgesehenen Fällen verändert werden.
-Dies liegt daran, dass Art.~101 Abs.~2 Satz~2 GG\index[paridx]{GG!Art.~101!Abs.~2 Satz~2} jedermann das Recht auf den \emph{gesetzlichen Richter} garantiert.
+Dies liegt daran, dass Art.~101 Abs.~2 Satz~2 GG\index[paridx]{GG!101@Art.~101!2@Abs.~2} jedermann das Recht auf den \emph{gesetzlichen Richter} garantiert.
 Der gesetzliche Richter ist allerdings nur der, der aufgrund des geltenden Rechts zum Klageeinreichungszeitpunkt dazu bestimmt war.
 Dies schließt jede Modifikation durch Einzelfallbeschluss aus.
 Einzig und allein die vom Gesetz vorgesehen Gründe können daher zu einer Besetzungsänderung führen.
@@ -67,7 +73,8 @@ Dass dies geboten ist, ergibt sich auch schon zwingend aus der Möglichkeit, das
 In diesem Fall wäre der verbleibende Richter allein nicht mehr als Spruchkörper beschlussfähig.
 Ohne den Beschluss über den Ausschluss der nicht erreichbaren Richter könnte dann aber kein Ersatzrichter nachrücken, um eine beschlussfähige Notbesetzung zu erzeugen.
 Daher müsste bei einer derartigen Verfahrensweise der verbleibende Richter sich bzw. den Spruchkörper für handlungsunfähig erklären und um Verfahrensverweisung bitten, obwohl doch gerade das Institut der Ersatzrichter unnötige vorschnelle Verfahrensverweisungen verhindern soll.
-Auch lässt sich der Wortlaut \enquote{ein befangener oder ausgeschlossener Richter} dahingehend deuten, dass \enquote{ausgeschlossener Richter} diejenigen umfasst, die schon per Beschluss ausgeschlossen wurden und \enquote{befangener […] Richter} diejenigen umfasst, die selbst in einer Entscheidung tatsächlich und unzweifelhaft befangen sind. Letzteres würde aufgrund des Grundsatzes, dass niemand Richter in eigener Sache sein darf, wohl unzweifelhaft zutreffen, sodass auch eine derartige Auslegung des \S~4 Abs.~2 mit dem Wortlaut vereinbar ist.
+Auch lässt sich der Wortlaut \enquote{ein befangener oder ausgeschlossener Richter} dahingehend deuten, dass \enquote{ausgeschlossener Richter} diejenigen umfasst, die schon per Beschluss ausgeschlossen wurden und \enquote{befangener […] Richter} diejenigen umfasst, die selbst in einer Entscheidung tatsächlich und unzweifelhaft befangen sind.
+Letzteres würde aufgrund des Grundsatzes, dass niemand Richter in eigener Sache sein darf, wohl unzweifelhaft zutreffen, sodass auch eine derartige Auslegung des \S~4 Abs.~2 mit dem Wortlaut vereinbar ist.
 Daher rückt der in der Reihenfolge nächste Ersatzrichter schon für den Beschluss über den Ausschluss eines Richters ein.
 
 Diese Vorgehensweise, obschon nie ausführlich begründet, entspricht auch der jahrelangen Praxis des Bundesschiedsgerichtes.\footnote{MISSING: Entscheidungen}
@@ -114,7 +121,7 @@ Daher muss hier das gleiche gelten: Die Regelung ist bezüglich des Wiedereinstr
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsbesorgnis}
 Das Parteiengesetz fordert in \S~14 Abs.~4\index[paridx]{PartG!14@\S~14!4@Abs.~4} lediglich, dass jede Streitpartei Richter wegen Befangenheit ablehnen kann.
 Auch wenn hier der Wortlaut des Parteiengesetzes andeutet, dass es lediglich bei tatsächlicher Befangenheit ein solches Ablehnungsrecht geben muss, liegt es viel näher, die Anforderung soweit auszulegen, dass die Schiedsgerichtsordnung schon für die Besorgnis der Befangenheit ein Ablehnungsrecht garantieren muss.\footnote{\cites[Wißmann][\S~14 Rn~32]{kersten2007parteiengesetz}[Lenski][\S~14 Rn~23]{lenski2011parteiengesetz}}
-Dieser akademische Streit um die Auslegung des \S~14 PartG\index[paridx]{PartG!\S~14} ist jedoch für Verfahren in der Schiedsgerichtsbarkeit der Piratenpartei Deutschland nicht relevant.
+Dieser akademische Streit um die Auslegung des \S~14 PartG\index[paridx]{PartG!14@\S~14} ist jedoch für Verfahren in der Schiedsgerichtsbarkeit der Piratenpartei Deutschland nicht relevant.
 Dies Schiedsgerichtsordnung garantiert in \S~5 Abs.~2 SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2} ein Recht auf Ablehnung eines jeden Richters bei Besorgnis seiner Befangenheit.
 
 
@@ -219,7 +226,7 @@ Jeder der Tatbestände des \S~5 Abs.~1 Satz~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs
 Es kommt somit für die einzelnen Tatbestände nicht mehr darauf an, ob ein neutraler objektiver, prozessfremder Beobachter nach verständiger Würdigung der Umstände berechtigte Zweifel an der Unparteilichkeit eines Richters haben kann.
 Sobald der Tatbestand erfüllt ist, ist ein Richter von der Mitwirkung am Verfahren auszuschließen.
 
-Die Regelung ist an dabei die staatlichen Prozessordnungen angelehnt.\footnote{Vgl. etwa \S~41 ZPO\index[paridx]{ZPO!\S~41},  \S~22 StPO\index[paridx]{StPO!\S~22}\nomenclature{StPO}{Strafprozessordnung}, \S~54 VwGO\index[paridx]{VwGO!\S~54}\nomenclature{VwGO}{Verwaltungsgerichtsordnung}, \S~51 FGO\index[paridx]{FGO!\S~51}\nomenclature{FGO}{Finanzgerichtsordnung}, \S~60 SGG\index[paridx]{SGG!\S~60}\nomenclature{SGG}{Sozialgerichtsgesetz} und \S~19 BVerfGG\index[paridx]{BVerfGG!\S~19}\nomenclature{BVerfGG}{Bundesverfassungsgerichtsgesetz}.}
+Die Regelung ist an dabei die staatlichen Prozessordnungen angelehnt.\footnote{Vgl. etwa \S~41 ZPO\index[paridx]{ZPO!41@\S~41},  \S~22 StPO\index[paridx]{StPO!22@\S~22}\nomenclature{StPO}{Strafprozessordnung}, \S~54 VwGO\index[paridx]{VwGO!54@\S~54}\nomenclature{VwGO}{Verwaltungsgerichtsordnung}, \S~51 FGO\index[paridx]{FGO!51@\S~51}\nomenclature{FGO}{Finanzgerichtsordnung}, \S~60 SGG\index[paridx]{SGG!60@\S~60}\nomenclature{SGG}{Sozialgerichtsgesetz} und \S~19 BVerfGG\index[paridx]{BVerfGG!19@\S~19}\nomenclature{BVerfGG}{Bundesverfassungsgerichtsgesetz}.}
 Diese Regelungen kommen aufgrund der vom Satzungsgeber getätigten Regelung in \S~5 Abs.~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} nicht in Betracht für eine analoge Anwendung.
 \S~14 Abs.~4 PartG\index[paridx]{PartG!14@\S~14!4@Abs.~4} fordert explizit vom Satzungsgeber, dass er die Richterablehnung selbst regeln muss.
 Damit hat der Gesetzgeber die Richterablehnung komplett in Hände des Satzungsgebers gelegt.
