paridx Konventionen umgesetzt, Formatierung

--- a/Einstweiliger-Rechtsschutz.tex
+++ b/Einstweiliger-Rechtsschutz.tex
@@ -1,5 +1,8 @@
 % \begin{refsection}
-\chapterpreamble{Der einstweilige Rechtsschutz hat den Zweck, Rechte des Antragstellers vorläufig zu sichern. Zentral sind hier das sog. „Eilbedürfnis“ und das „Sicherungsinteresse“, \S~11~Abs.~2~SGO\index[paridx]{SGO!\S~11 Abs.~2}. Obwohl einstweilige Anordnungen regelmäßig dazu dienen dürften, den status quo bis zur Entscheidung in der Hauptsache zu sichern, können sie auch ohne eine Klage in der Hauptsache beantragt werden. Eine einstweilige Anordnung darf die Hauptsache nicht vorwegnehmen, d.h. es darf nicht über den Umweg einer einstweiligen Anordnunge zu einem „kurzen Prozess“ kommen, in dem die schon Hauptsache am reduzierten Beweismaß der Glaubhaftmachuung entschieden wird.}
+\chapterpreamble{Der einstweilige Rechtsschutz hat den Zweck, Rechte des Antragstellers vorläufig zu sichern.
+Zentral sind hier das sog. „Eilbedürfnis“ und das „Sicherungsinteresse“, \S~11~Abs.~2~SGO\index[paridx]{SGO!11@\S~11!2@Abs.~2}.
+Obwohl einstweilige Anordnungen regelmäßig dazu dienen dürften, den status quo bis zur Entscheidung in der Hauptsache zu sichern, können sie auch ohne eine Klage in der Hauptsache beantragt werden.
+Eine einstweilige Anordnung darf die Hauptsache nicht vorwegnehmen, d.h. es darf nicht über den Umweg einer einstweiligen Anordnunge zu einem „kurzen Prozess“ kommen, in dem die schon Hauptsache am reduzierten Beweismaß der Glaubhaftmachuung entschieden wird.}
 
 \chapter{Der einstweilige Rechtsschutz}
 %\blindtext[1]
