--- a/Normenauslegung.tex
+++ b/Normenauslegung.tex
@@ -53,7 +53,7 @@ Zuweilen führen mehrere Tatbestände zur selben Rechtsfolge, ebenso können an 
 In einem Satz können sich dadurch durchaus mehrere Rechtssätze verbergen.
 
 \textbf{Beispiel:} \S~6 Abs.~1 S.~1~BS\index[paridx]{BS!6@\S~6!1@Abs.~1} (\Zitat{Verstößt ein Pirat gegen die Satzung oder gegen Grundsätze oder Ordnung der Piratenpartei Deutschland und fügt Ihr damit Schaden zu, so kann der Bundesvorstand folgende Ordnungsmaßnahmen anordnen: Verwarnung, Verweis, Enthebung von einem Parteiamt, Aberkennung der Fähigkeit ein Parteiamt zu bekleiden, Ausschluss aus der Piratenpartei Deutschland.} enthält insg. 15 Rechtssätze:
-An die drei Tatbestände Satzungsverstoß, Grundsatzverstoß oder Ordnungsverstoß können nach Auswahl des Bundesvorstands jeweils fünf Rechtsfolgen (Verwarnung, Verweis, Enthebung, Wählbarkeitsverlust, Ausschlussantrag beim Schiedsgericht)\footnote{Vgl. \S~6 Abs.~2~BS,\index[paridx]{BS!6@\S~6!2@Abs.~2} ebenso \S~10 Abs.~5 S.~1~PartG.\nomenclature{PartG}{Gesetz über die politischen Parteien (Parteiengesetz)}\index[paridx]{PartG!10@\S~10!4@Abs.~4}} geknüpft werden.
+An die drei Tatbestände Satzungsverstoß, Grundsatzverstoß oder Ordnungsverstoß können nach Auswahl des Bundesvorstands jeweils fünf Rechtsfolgen (Verwarnung, Verweis, Enthebung, Wählbarkeitsverlust, Ausschlussantrag beim Schiedsgericht)\footnote{Vgl. \S~6 Abs.~2~BS,\index[paridx]{BS!6@\S~6!2@Abs.~2} ebenso \S~10 Abs.~5 S.~1~PartG.\nomenclature{PartG}{Gesetz über die politischen Parteien (Parteiengesetz)}\index[paridx]{PartG!10@\S~10!5@Abs.~5}} geknüpft werden.
 
 %\subsection{Verweisungen}
 
@@ -61,9 +61,9 @@ An die drei Tatbestände Satzungsverstoß, Grundsatzverstoß oder Ordnungsversto
 \index[idx]{Subsumtion}
 Juristerei ist der Streit um Begrifflichkeiten.
 Aus der Frage, ob ein bestimmter, realer Sachverhalt unter einen juristischen Begriff zu fassen (\emph{subsumieren}, von lat. \emph{sub-sumere} – „darunter fassen“) ist, oder nicht, leitet sich letztlich die Anwendung eines Rechtssatzes ab:
-\S~14~BS\index[paridx]{BS!\S~14} bspw. schreibt vor, dass \emph{\enquote{Die Satzungen der Landesverbände und ihrer Untergliederungen […] mit den grundsätzlichen Regelungen dieser Satzung übereinstimmen}} müssen.
+\S~14~BS\index[paridx]{BS!14@\S~14} bspw. schreibt vor, dass \emph{\enquote{Die Satzungen der Landesverbände und ihrer Untergliederungen […] mit den grundsätzlichen Regelungen dieser Satzung übereinstimmen}} müssen.
 Nur wenn klar ist, ob eine Regelung der Bundessatzung eine \enquote{grundsätzliche Regel}\index[idx]{Satzungsregel!grundsätzliche} ist, oder nicht, ist klar, ob eine Landessatzung davon abweichen darf, oder nicht.
-Da \S~14~BS\index[paridx]{BS!\S~14} die grundsätzlichen Regeln nicht selbst nennt, müssen sie erst ermittelt werden.
+Da \S~14~BS\index[paridx]{BS!14@\S~14} die grundsätzlichen Regeln nicht selbst nennt, müssen sie erst ermittelt werden.
 Möglich wäre hier, die Aufzählung selbst vorzunehmen, d.h. alle grundsätzlichen Regeln herauszufinden.
 Das aber ist zeitaufwändig und regelmäßig zu umfangreich, da ja nur die Frage zu klären ist, ob eine bestimmte Regel der Satzung eine grundsätzliche Regel ist und daher alle anderen Regeln außer Betracht bleiben können.
 Sinnvoller ist, für den Begriff der \enquote{grundsätzlichen Regel} einen anderen Begriff zu finden, der diesen anhand von prüfbaren Merkmalen beschreibt.
