--- a/Zulaessigkeit.tex
+++ b/Zulaessigkeit.tex
@@ -1,5 +1,8 @@
 % \begin{refsection}
-\chapterpreamble{Zulässig ist eine Klage nur dann, wenn die Anrufung erfolgreich war. Form und Frist der Anrufung, Zuständigkeit für das Verfahren und Erfolglosigkeit oder Entbehrlichkeit der Schlichtung sind bereits vor Eröffnung zu prüfen, sind im Urteil jedoch noch einmal darzulegen. Die Klage ist grundsätzlich gegen das jeweilige Organ zu richten. Klagen gegen Einzelmitglieder, losgelöst von ihrer Funktion, sieht die SGO nicht vor.}
+\chapterpreamble{Zulässig ist eine Klage nur dann, wenn die Anrufung erfolgreich war.
+Form und Frist der Anrufung, Zuständigkeit für das Verfahren und Erfolglosigkeit oder Entbehrlichkeit der Schlichtung sind bereits vor Eröffnung zu prüfen, sind im Urteil jedoch noch einmal darzulegen.
+Die Klage ist grundsätzlich gegen das jeweilige Organ zu richten.
+Klagen gegen Einzelmitglieder, losgelöst von ihrer Funktion, sieht die SGO nicht vor.}
 
 \chapter{Zulässigkeit der Klagebehren}
 %\blindtext[1]
