--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -186,7 +186,7 @@ Insbesondere eine korrekte Belehrung schadet in keinem Falle.
 \label{Urteilsaufbau:Rechtsmittelbelehrung:Falsch}
 \index[idx]{Rechtsmittelbelehrung!unrichtige}
 \index[idx]{Rechtsmittelbelehrung!fehlende}
-Ist die Rechtsmittelbelehrung unterblieben, so beginnt die Rechtsmittelfrist nicht zu laufen, \S~13 Abs.~2 S.~3~SGO\index[paridx]{SGO!13@\S~13!2@Abs.~2}.\footnote{Anderer Ansicht ist neuerdings das Bundesschiedsgericht, nach dem eine solche, dem §~58~VwGO entsprechende Regelung, in der SGO nicht enthalten ist, \cite{BSGPP100132493}.}
+Ist die Rechtsmittelbelehrung unterblieben, so beginnt die Rechtsmittelfrist nicht zu laufen, \S~13 Abs.~2 S.~3~SGO\index[paridx]{SGO!13@\S~13!2@Abs.~2}.\footnote{Anderer Ansicht ist offenbar neuerdings das Bundesschiedsgericht, dem zufolge eine solche, dem \S~58~VwGO\index[paridx]{VwGO!58@\S~58} entsprechende Regelung, in der SGO nicht enthalten ist, \cite{BSGPP100132493}.}
 Dies ändert nichts an der Ausschlussfrist von 3~Monaten nach Zugang, nach der eine Entscheidung unanfechtbar ist.
 Effektiv verlängert sich bei einer fehlenden Rechtsmittelbelehrung also die Berufungsfrist von 14~Tagen auf 3~Monate nach Zustellung des (unvollständigen) Urteils.
 
